# localsend-rs

./: Cargo.toml  LICENSE  README.md
localsend-lib/: Cargo.toml
localsend-lib/src/: error.rs  lib.rs  settings.rs
localsend-lib/src/receive/: mod.rs  receive_session.rs  receiving_file.rs
localsend-lib/src/scanner/: mod.rs  multicast.rs
localsend-lib/src/send/: mod.rs  send_file.rs  send_session.rs
localsend-lib/src/server/: controller.rs  error.rs  mod.rs
localsend-lib/src/util/: device.rs
localsend-proto/: Cargo.toml
localsend-proto/src/: constants.rs  device.rs  lib.rs  route.rs
localsend-proto/src/dto/: file_dto.rs  mod.rs  multicast_dto.rs  prepare_upload_dto.rs  protocol_type.rs  register_dto.rs
src/: main.rs  ui.rs
