[package]
name = "localsend-lib"
version = "0.1.1"
authors = ["zpp0196 zpp0196@gmail.com"]
edition = "2021"
license = "MIT"
repository = "https://github.com/zpp0196/localsend-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.77"
axum = "0.7.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
futures-util = "0.3.30"
hostname = "0.3.1"
linked-hash-map = "0.5.6"
localsend-proto = { path = "../localsend-proto" }
log = "0.4.20"
md5 = "0.7.0"
mime_guess = "2.0.4"
once_cell = "1.19.0"
pathdiff = "0.2.1"
rcgen = "0.12.0"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["net", "time", "fs"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
walkdir = "2.5.0"
