[package]
name = "localsend-proto"
version = "0.1.1"
authors = ["zpp0196 zpp0196@gmail.com"]
edition = "2021"
license = "MIT"
repository = "https://github.com/zpp0196/localsend-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime_guess = "2.0.4"
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.111"
